# meal-planner

./: .flake8  LICENSE  dockerfile  main.py  meal_planner_bot.py  pyproject.toml  recipe_source.py  skinnytaste.py
.github/workflows/: build-and-test.yml  docker.yaml  python-app.yml
src/meal_planner/: __init__.py  calendar_access.py  classes.py  data_access.py  helper_functions.py  models.py  recipe.py  recipe_factory.py
src/meal_planner/sources/: _base_source.py  skinnytaste.py
src/meal_planner_bot/: bot.py
src/meal_planner_bot/utils/: __init__.py  calendar_access.py  data_access.py  helper_functions.py  models.py  recipe_factory.py
tests/: test_models.py
