[tool.poetry]
name = "meal_planner_bot"
version = "0.1.0"
description = ""
authors = ["Andy Grigg <mail@andygrigg.com>"]
readme = "README.md"
packages = [
    {include = "meal_planner_bot", from="src"}
]

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.11.1"
bunnet = "^1.0.1"
discord-py = "^2.1.0"
icalevents = "^0.1.27"
pydantic = "^1.10.4"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
profile = "black"
